@startuml
class BuildingUIController{
    +OnDemolishClick():void
    +OnClose():void
    +Open():void
}

class ShopListingController{
    -notEnoughMoney: boolean
    +Selected: UnityEvent
    +OnClick(): void
    +SetNotEnoughMoneyState(s: boolean): void
}

class BuilderGridController{
    +IsOpened:bool
    +Open()
    +Close()
}

class BuilderCell{
    -isHovered: bool
    -isForbidden: bool
    +OnClick()
    +OnHover()
    +SetForbiddenState(forbidden:bool)
}

BuilderGridController "controller" *-- "*\n-cells" BuilderCell : creates >

BuildingUIController  o-- "1\n-grid" BuilderGridController

BuildingUIController  o-left-- "1\n+shopItems" BuildingShopItem

BuildingUIController *-- "*" ShopListingController : creates >

ShopListingController -- "shopItem" BuildingShopItem : displays >
abstract class BuildingShopItem{
    +icon: GameObject
}

class FieldMetadata{
    +cost:int
    +refundAmount: int
}

BuildingShopItem --|> ScriptableObject
BuildingUIController --|> MonoBehaviour
BuilderGridController --|> MonoBehaviour
ShopListingController --|> MonoBehaviour
BuilderCell --|> MonoBehaviour
BuildingShopItem ..|> FieldFactory
BuildingShopItem o-- FieldMetadata

@enduml